<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F1F3"
    tools:context=".ui.FastestRouteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="@dimen/_200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/place_container"
            android:layout_margin="@dimen/_5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_6dp"
            app:cardElevation="@dimen/_5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="@dimen/_45dp"
                    android:layout_marginStart="@dimen/_50dp"
                    android:text="@string/label_source"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="@dimen/_5dp"
                    android:alpha="0.7"
                    android:textSize="@dimen/_8dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_source"
                    android:layout_marginTop="@dimen/_5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_source"
                    android:layout_marginEnd="@dimen/_45dp"
                    android:layout_marginStart="@dimen/_50dp"
                    android:text="@string/source_location"
                    android:fontFamily="@font/montserrat_semibold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_13dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_source_link"
                    android:layout_marginTop="@dimen/_5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_source"
                    android:layout_marginEnd="@dimen/_45dp"
                    android:layout_marginStart="@dimen/_50dp"
                    android:text="@string/source_link"
                    android:fontFamily="@font/montserrat_semibold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/color_orange"
                    android:textSize="@dimen/_11dp"/>

                <ImageView
                    android:id="@+id/btn_back"
                    android:elevation="2dp"
                    android:layout_width="@dimen/_40dp"
                    android:layout_height="@dimen/_40dp"
                    android:padding="@dimen/_10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/divider"
                    app:layout_constraintEnd_toStartOf="@id/label_source"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:layout_width="@dimen/_6dp"
                    android:layout_height="@dimen/_6dp"
                    android:layout_marginEnd="@dimen/_50dp"
                    android:src="@drawable/orange_dot"
                    app:layout_constraintTop_toTopOf="@id/text_source"
                    app:layout_constraintBottom_toBottomOf="@id/text_source"
                    app:layout_constraintEnd_toStartOf="@id/label_source"/>

                <ImageView
                    android:layout_width="@dimen/_40dp"
                    android:layout_height="@dimen/_40dp"
                    android:padding="@dimen/_10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_favorite_border_24"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/label_source"
                    app:tint="@color/color_626263" />

                <View
                    android:id="@+id/divider"
                    android:layout_marginTop="@dimen/_10dp"
                    app:layout_constraintTop_toBottomOf="@id/text_source_link"
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:alpha="0.1"
                    android:background="@color/black"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    android:layout_marginEnd="@dimen/_45dp"
                    android:layout_marginStart="@dimen/_50dp"
                    android:text="@string/label_destination"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="@dimen/_5dp"
                    android:alpha="0.7"
                    android:textSize="@dimen/_8dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_destination"
                    android:layout_marginTop="@dimen/_5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_destination"
                    android:layout_marginEnd="@dimen/_45dp"
                    android:layout_marginStart="@dimen/_50dp"
                    android:text="@string/destination_location"
                    android:fontFamily="@font/montserrat_semibold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_13dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:paddingBottom="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:id="@+id/text_destination_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_destination"
                    android:layout_marginEnd="@dimen/_45dp"
                    android:layout_marginStart="@dimen/_50dp"
                    android:text="@string/destination_link"
                    android:fontFamily="@font/montserrat_semibold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/color_orange"
                    android:textSize="@dimen/_11dp"/>

                <ImageView
                    android:layout_width="@dimen/_6dp"
                    android:layout_height="@dimen/_6dp"
                    android:layout_marginEnd="@dimen/_5dp"
                    android:src="@drawable/black_dot"
                    app:layout_constraintTop_toTopOf="@id/text_destination"
                    app:layout_constraintBottom_toBottomOf="@id/text_destination"
                    app:layout_constraintEnd_toStartOf="@id/label_destination"/>

                <ImageView
                    android:layout_width="@dimen/_40dp"
                    android:layout_height="@dimen/_40dp"
                    android:padding="@dimen/_10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_favorite_border_24"
                    app:layout_constraintTop_toTopOf="@id/divider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/label_destination"
                    app:tint="@color/color_626263" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/type_container"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_150dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/place_container"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="@dimen/_35dp"
                android:layout_height="@dimen/_35dp"
                android:padding="@dimen/_9dp"
                android:background="@drawable/white_circle_background"
                android:src="@drawable/metro"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_metro"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/monsterrat_bold"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_14dp"/>

            <ImageView
                android:alpha="0.3"
                android:layout_marginStart="@dimen/_50dp"
                android:layout_width="@dimen/_35dp"
                android:layout_height="@dimen/_35dp"
                android:padding="@dimen/_11dp"
                android:background="@drawable/white_circle_background"
                android:src="@drawable/bus"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:alpha="0.3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_bus"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/monsterrat_bold"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_14dp"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_fastest_route"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_fastest_route"
            android:textAllCaps="true"
            android:fontFamily="@font/monsterrat_bold"
            android:textColor="@color/text_color"
            app:layout_constraintTop_toBottomOf="@id/type_container"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="@dimen/_10dp"
            android:id="@+id/route_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/label_fastest_route"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>